--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
                       <a href="static/pdfs/supplementary_material.pdf" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
-                        <i class="fa fa-youtube-play"></i>
+                        <!-- <i class="fa fa-youtube-play"></i> -->
+                        <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
                       </span>
                       <span>Video</span>
                     </a>
