revise theindex.html

--- a/index.html
+++ b/index.html
@@ -55,13 +55,20 @@
             <h1 class="title is-1 publication-title">Uncertainty-aware Reinforcement Learning for Autonomous Driving with Multimodal Digital Driver Guidance</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
-              <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+              <span class="author-block">Wenhui Huang</span>
+                <span class="author-block">Zitong Shan</span>
+                  <span class="author-block">Shanhe Lou</span>
+                      <span class="author-block">Chen Lv</span>
+                <!-- 
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Wenhui Huang</a></span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Zitong Shan</a></span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Shanhe Lou</a>
+                    <span class="author-block">
+                      <a href="Fourth AUTHOR PERSONAL LINK" target="_blank">Chen Lv</a> 
+                    </span>
+                  </span>-->
                   </div>
 
                   <div class="is-size-5 publication-authors">
