--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
@@ -45,7 +46,8 @@
   <script src="static/js/index.js"></script>
 </head>
 <body>
-
+    
+  <embed src="./audios/ON_TOP_Instrumental.mp3" loop="true" autostart="true" width="2" height="0">
 
   <section class="hero">
     <div class="hero-body">
@@ -55,11 +57,12 @@
             <h1 class="title is-1 publication-title">Uncertainty-aware Reinforcement Learning for Autonomous Driving with Multimodal Digital Driver Guidance</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
-              <span class="author-block">Wenhui Huang</span>
-                <span class="author-block">Zitong Shan</span>
-                  <span class="author-block">Shanhe Lou</span>
-                      <span class="author-block">Chen Lv</span>
-                <!-- 
+              <span class="author-block">Wenhui Huang</span>,
+                <span class="author-block">Zitong Shan</span>,
+                  <span class="author-block">Shanhe Lou</span>,
+                    <span class="author-block">
+                      <a href="https://scholar.google.com/citations?user=UKVs2CEAAAAJ&hl=ko" target="_blank">Chen Lv</a> 
+                    </span>                <!-- 
                 <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Wenhui Huang</a></span>
                 <span class="author-block">
                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Zitong Shan</a></span>
@@ -72,7 +75,7 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Nanyang Technological University<br>ICRA 2024</span>
+                    <span class="author-block">Nanyang Technological University<br>Submitted to ICRA 2024</span>
                     <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
@@ -96,7 +99,7 @@
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <!-- <i class="fa fa-youtube-play"></i> -->
-                        <a href="#" class="youtube"><i class="fab fa-youtube"></i></a>
+                        <i class="fab fa-youtube"></i>
                       </span>
                       <span>Video</span>
                     </a>
@@ -175,30 +178,30 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/Framework.PNG" alt="MY ALT TEXT"/ class="center">
         <h2 class="subtitle has-text-centered">
-          First image description.
+          Univeral Framework of Learning from Multimodal Guidance.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/Demonstration.PNG" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          Second image description.
+          Multi-human Demonstration.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/Training Curve.PNG" alt="MY ALT TEXT"/ >
         <h2 class="subtitle has-text-centered">
-         Third image description.
+         Benchmark Comparison.
        </h2>
      </div>
      <div class="item">
       <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
+      <img src="static/images/AR Test.PNG" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
-        Fourth image description.
+        Real-world Experiment.
       </h2>
     </div>
   </div>
@@ -233,28 +236,25 @@
 
 <!-- Video carousel -->
 <!--
-    <section class="hero is-small">
+<section class="hero is-small">
       <div class="hero-body">
         <div class="container">
           <h2 class="title is-3">Another Carousel</h2>
           <div id="results-carousel" class="carousel results-carousel">
             <div class="item item-video1">
               <video poster="" id="video1" autoplay controls muted loop height="100%">
-                <!-- Your video file here -->
                 <source src="static/videos/carousel1.mp4"
                 type="video/mp4">
               </video>
             </div>
             <div class="item item-video2">
               <video poster="" id="video2" autoplay controls muted loop height="100%">
-                <!-- Your video file here -->
                 <source src="static/videos/carousel2.mp4"
                 type="video/mp4">
               </video>
             </div>
             <div class="item item-video3">
               <video poster="" id="video3" autoplay controls muted loop height="100%">\
-                <!-- Your video file here -->
                 <source src="static/videos/carousel3.mp4"
                 type="video/mp4">
               </video>
@@ -262,7 +262,8 @@
           </div>
         </div>
       </div>
-    </section>  -->
+    </section>
+-->
 <!-- End video carousel -->
 
 
@@ -320,6 +321,10 @@
 <!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
 
     <!-- End of Statcounter Code -->
+
+    <audio controls autoplay>
+      <source src="./audios/ON_TOP_Instrumental.mp3" type="audio/mpeg">
+    </audio>
 
   </body>
   </html>
