--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 </head>
 <body>
     
-  <embed src="./audios/ON_TOP_Instrumental.mp3" loop="true" autostart="true" width="2" height="0">
-
+  <audio src="./static/audios/ON_TOP_Instrumental.mp3" controls autoplay loop>	
+    <iframe src="./static/audios/ON_TOP_Instrumental.mp3" allow="autoplay" id="audio"></iframe>
+  </audio>
+  
   <section class="hero">
     <div class="hero-body">
       <div class="container is-max-desktop">
@@ -321,10 +323,6 @@
 <!-- You can add a tracker to track page visits by creating an account at statcounter.com -->
 
     <!-- End of Statcounter Code -->
-
-    <audio controls autoplay>
-      <source src="./audios/ON_TOP_Instrumental.mp3" type="audio/mpeg">
-    </audio>
 
   </body>
   </html>
