--- a/index.html
+++ b/index.html
@@ -202,14 +202,14 @@
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/Demonstration.png" alt="MY ALT TEXT"/>
+        <img src="static/images/Demonstration.PNG" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           Multi-human Demonstration.
         </h2>
       </div>
      <div class="item">
        <!-- Your image here -->
-       <img src="static/images/Scenario.PNG" alt="MY ALT TEXT"/ >
+       <img src="static/images/Scenario.png" alt="MY ALT TEXT"/ >
        <h2 class="subtitle has-text-centered">
         Autonomous Driving Scenario.
       </h2>
