--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
   <div class="hero-body">
     <div class="container">
       <div class="columns is-centered has-text-centered">
-        <h2 class="title is-3">Previous Work: Preference-guided Deep Q-Network (PGDQN)
+        <h2 class="title is-3">Previous Work: Preference-Guided Deep Q-Network (PGDQN)
           <span class="link-block">
             <a href="https://github.com/OscarHuangWind/Preference-Guided-DQN-Atari" target="_blank"
               class="external-link button is-normal is-rounded is-dark">
