--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <!-- Your image here -->
         <img src="static/images/Framework.PNG" alt="MY ALT TEXT"/ class="center">
         <h2 class="subtitle has-text-centered">
-          Univeral Framework of Learning from Multimodal Guidance.
+          Universal Framework of Learning from Multimodal Guidance.
         </h2>
       </div>
       <div class="item">
