--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
       <div class="column is-four-fifths">
          <div class="publication-video">
            <!-- Youtube embed code here -->
-           <iframe src="https://youtu.be/P4XWiXknpDA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+           <iframe src="https://www.youtube.com/embed/P4XWiXknpDA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
          </div>
     </div>
     </div>
