upload bilibili video

--- a/index.html
+++ b/index.html
@@ -109,13 +109,24 @@
                         <!-- <i class="fa fa-youtube-play"></i> -->
                         <i class="fab fa-youtube"></i>
                       </span>
-                      <span>Video</span>
+                      <span>Youtude</span>
                     </a>
                   </span>
 
+                  <!-- BiliBili link -->
+                  <span class="link-block">
+                    <a href="https://www.bilibili.com/video/BV1TC4y1o75U" target="_blank"
+                    class="external-link button is-normal is-rounded is-black">
+                    <span class="icon">
+                      <i class="fa fa-tv"></i>
+                    </span>
+                    <span>BiliBili</span>
+                  </a>
+                </span>
+
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/OscarHuangWind/Learning-from-Intervention." target="_blank"
+                    <a href="https://github.com/OscarHuangWind/Learning-from-Intervention" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
